# SandGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: level01.map
src/: CAboutScreen.cpp  CAboutScreen.h  CEntity.cpp  CEntity.h  CEvent.cpp  CEvent.h  CGameScreen.cpp  CGameScreen.h  CMainWindow.cpp  CMainWindow.h  CPauseScreen.cpp  CPauseScreen.h  CPlayer.cpp  CPlayer.h  CSandBall.cpp  CSandBall.h  CScreen.cpp  CScreen.h  CSpriteSheet.cpp  CSpriteSheet.h  CTile.cpp  CTile.h  CWaterBlob.cpp  CWaterBlob.h  main.cpp
